# minitalk

./: CMakeLists.txt  Makefile
client/: Makefile  client.c
client_src/: client.c
server/: Makefile  server.c
server_src/: server.c
